--- a/tools/jolie2plasma/nbproject/project.properties
+++ b/tools/jolie2plasma/nbproject/project.properties
@@ -1,3 +1,7 @@
+annotation.processing.enabled=true
+annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
+annotation.processing.run.all.processors=true
 application.title=jolie2plasma
 application.vendor=fmontesi
 build.classes.dir=${build.dir}/classes
@@ -24,6 +28,7 @@ debug.test.modulepath=\
 dist.dir=dist
 dist.jar=${dist.dir}/jolie2plasma.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.jolie2plasma-src=src
 includes=**
@@ -34,10 +39,13 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
-javac.source=1.6
-javac.target=1.6
+javac.processorpath=\
+    ${javac.classpath}
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -48,6 +56,7 @@ javac.test.modulepath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -57,9 +66,12 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jlink.launcher=false
+jlink.launcher.name=jolie2plasma
 main.class=joliex.plasma.Jolie2Plasma
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
+mkdist.disabled=false
 platform.active=default_platform
 project.jolie=../../jolie
 project.libjolie=../../libjolie
