--- a/tools/joliec/nbproject/project.properties
+++ b/tools/joliec/nbproject/project.properties
@@ -1,3 +1,4 @@
+annotation.processing.processors.list=
 debug.modulepath=\
     ${run.modulepath}
 debug.test.modulepath=\
@@ -6,17 +7,27 @@ debug.test.modulepath=\
 excludes=
 javac.deprecation=false
 build.test.results.dir=${build.dir}/test/results
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.test.modulepath=\
     ${javac.modulepath}
-run.classpath=${javac.classpath}\:${build.classes.dir}
+javadoc.html5=false
+jlink.launcher=false
+jlink.launcher.name=joliec
+mkdist.disabled=false
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 javadoc.nonavbar=false
 run.modulepath=\
     ${javac.modulepath}
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
-javac.processorpath=${javac.classpath}
-javac.target=1.6
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+javac.processorpath=\
+    ${javac.classpath}
+javac.target=1.8
 javadoc.noindex=false
 javadoc.additionalparam=
 includes=**
@@ -41,13 +52,17 @@ dist.dir=dist
 build.classes.excludes=**/*.java,**/*.form
 javadoc.encoding=${source.encoding}
 javadoc.splitindex=true
-javac.source=1.6
+javac.source=1.8
 application.vendor=fmontesi
 junit.selected.version=3
 debug.classpath=${run.classpath}
 run.jvmargs=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
-javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 jar.compress=false
 build.generated.dir=${build.dir}/generated
 javadoc.private=false
@@ -60,7 +75,9 @@ dist.javadoc.dir=${dist.dir}/javadoc
 src.dir=src
 endorsed.classpath=
 annotation.processing.enabled.in.editor=false
-javac.classpath=${reference.jolie.jar}\:${reference.libjolie.jar}
+javac.classpath=\
+    ${reference.jolie.jar}:\
+    ${reference.libjolie.jar}
 project.jolie=../../jolie
 build.generated.sources.dir=${build.dir}/generated-sources
 javadoc.version=false
