Eferos93 jsonrpc lsp (#186)
* # Added two classes: LSPParser and LSPMessage that that are used in

* Smaller fixes

Added two classes: LSPMessage and LSPParser
Modified class JsonRpcrotocol in order to use whether HttpParser or LSPParser

* Final commit (needs refactor though)

* Final committ, now for real (still need refactor though)

There is a lot of code repetition in the JsonRpcProtocol class, I would suggest to use inheritance and polymorphism

* Refactor done + fixes

-Added a method createComMessage in the JsonRpcProtocol class to get rid of repeated code.
-in the send_internal method, in the message.isFault if branch, fixed the bug that was putting the id of the message inside of the error json object. For instance instead of {jsonrpc:"2.0", error:{... id:..}}, now it will be {jsonrpc:"2.0", id:.., error:{....}} as stated by the JSONRPC specification

* Refactor done + fixes + binaries deleted

-Added a method createCommMessage in the JsonRpcProtocol class to get rid of repeated code.
-in the send_internal method, in the message.isFault if branch, fixed the bug that was putting the id of the message inside of the error json object. For instance instead of {jsonrpc:"2.0", error:{... id:..}}, now it will be {jsonrpc:"2.0", id:.., error:{....}} as stated by the JSONRPC specification
Latest commit 01448c9  5 minutes ago

* Adapted to 1.8 version

* Update JsonRpcProtocol.java

* JSONrpc fix


Former-commit-id: 83fc99dc737ecb7092ebaec80785f7fed107f635

--- a/extensions/jsonrpc/nbproject/project.properties
+++ b/extensions/jsonrpc/nbproject/project.properties
@@ -1,8 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 application.title=jsonrpc
 application.vendor=fmontesi
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -38,12 +40,13 @@ javac.classpath=\
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
+javac.external.vm=false
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -54,6 +57,7 @@ javac.test.modulepath=\
 javadoc.additionalparam=
 javadoc.author=false
 javadoc.encoding=${source.encoding}
+javadoc.html5=false
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
@@ -63,6 +67,8 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 jaxbwiz.endorsed.dirs="${netbeans.home}/../ide12/modules/ext/jaxb/api"
+jlink.launcher=false
+jlink.launcher.name=jsonrpc
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
