--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ build/
 /jolie/.idea/tasks.xml
 /extensions/soaps/nbproject/private/
 /extensions/auto/nbproject/private/
+/libjolie/build
+/support/jolie-gwt/build
