Fixed parse doc for interfaces, ports, and types. Fixed also JolieDoc
Former-commit-id: a37d556bf64d35cae84e33569e1a4ab708629e25

--- a/tools/joliedoc/nbproject/project.properties
+++ b/tools/joliedoc/nbproject/project.properties
@@ -1,98 +1,73 @@
+#Fri May 24 15:37:43 CEST 2019
+run.classpath=${javac.classpath}\:${build.classes.dir}
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
+excludes=
+javac.processorpath=${javac.classpath}
+dist.javadoc.dir=${dist.dir}/javadoc
+test.src.dir=test
+jnlp.offline-allowed=false
+run.modulepath=${javac.modulepath}
 annotation.processing.enabled=true
+jnlp.codebase.type=no.codebase
+jar.index=${jnlp.enabled}
+build.sysclasspath=ignore
+debug.modulepath=${run.modulepath}
+javac.compilerargs=
+javadoc.noindex=false
+javadoc.private=false
+jar.archive.disabled=${jnlp.enabled}
+javadoc.author=false
+endorsed.classpath=
+main.class=jolie.doc.JolieDoc
+junit.selected.version=3
+source.encoding=UTF-8
+javac.source=1.8
+includes=**
+javadoc.use=true
+jar.compress=false
+javadoc.nonavbar=false
 annotation.processing.enabled.in.editor=false
+javadoc.notree=false
 annotation.processing.processors.list=
-annotation.processing.run.all.processors=true
-application.title=joliedoc
+javac.deprecation=false
 application.vendor=
-build.classes.dir=${build.dir}/classes
+javadoc.additionalparam=
+jnlp.mixed.code=defaut
+jnlp.signed=false
+build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.splitindex=true
+javac.processormodulepath=
+run.jvmargs=
+javadoc.encoding=${source.encoding}
+javac.classpath=${reference.libjolie.jar}\:${reference.jolie.jar}
+mkdist.disabled=false
+run.test.modulepath=${javac.test.modulepath}
 build.classes.excludes=**/*.java,**/*.form
-# This directory is removed when the project is cleaned:
+dist.jar=${dist.dir}/joliedoc.jar
+build.classes.dir=${build.dir}/classes
+project.libjolie=../../libjolie
+debug.test.modulepath=${run.test.modulepath}
+build.test.classes.dir=${build.dir}/test/classes
+javadoc.windowtitle=
+build.test.results.dir=${build.dir}/test/results
+reference.jolie.jar=${project.jolie}/dist/jolie.jar
+jnlp.enabled=false
+reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
+dist.dir=dist
 build.dir=build
 build.generated.dir=${build.dir}/generated
-build.generated.sources.dir=${build.dir}/generated-sources
-# Only compile against the classpath explicitly listed here:
-build.sysclasspath=ignore
-build.test.classes.dir=${build.dir}/test/classes
-build.test.results.dir=${build.dir}/test/results
-# Uncomment to specify the preferred debugger connection transport:
-#debug.transport=dt_socket
-debug.classpath=\
-    ${run.classpath}
-debug.modulepath=\
-    ${run.modulepath}
-debug.test.classpath=\
-    ${run.test.classpath}
-debug.test.modulepath=\
-    ${run.test.modulepath}
-# This directory is removed when the project is cleaned:
-dist.dir=dist
-dist.jar=${dist.dir}/joliedoc.jar
-dist.javadoc.dir=${dist.dir}/javadoc
-endorsed.classpath=
-excludes=
-includes=**
-jar.archive.disabled=${jnlp.enabled}
-jar.compress=false
-jar.index=${jnlp.enabled}
-javac.classpath=\
-    ${reference.libjolie.jar}:\
-    ${reference.jolie.jar}
-# Space-separated list of extra javac options
-javac.compilerargs=
-javac.deprecation=false
-javac.modulepath=
-javac.processormodulepath=
-javac.processorpath=\
-    ${javac.classpath}
-javac.source=1.8
-javac.target=1.8
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}
-javac.test.modulepath=\
-    ${javac.modulepath}
-javadoc.additionalparam=
-javadoc.author=false
-javadoc.encoding=${source.encoding}
-javadoc.noindex=false
-javadoc.nonavbar=false
-javadoc.notree=false
-javadoc.private=false
-javadoc.splitindex=true
-javadoc.use=true
 javadoc.version=false
-javadoc.windowtitle=
-jnlp.codebase.type=no.codebase
-jnlp.descriptor=application
-jnlp.enabled=false
-jnlp.mixed.code=defaut
-jnlp.offline-allowed=false
-jnlp.signed=false
-main.class=jolie.doc.JolieDoc
-manifest.file=manifest.mf
-meta.inf.dir=${src.dir}/META-INF
-mkdist.disabled=false
+application.title=joliedoc
+javac.test.modulepath=${javac.modulepath}
+debug.test.classpath=${run.test.classpath}
+javac.target=1.8
 platform.active=default_platform
-project.jolie=../../jolie
-project.libjolie=../../libjolie
-reference.jolie.jar=${project.jolie}/dist/jolie.jar
-reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project
-# (you may also define separate properties like run-sys-prop.name=value instead of -Dname=value
-# or test-sys-prop.name=value to set system properties for unit tests):
-run.jvmargs=
-run.modulepath=\
-    ${javac.modulepath}
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-run.test.modulepath=\
-    ${javac.test.modulepath}
-source.encoding=UTF-8
+manifest.file=manifest.mf
+jnlp.descriptor=application
+meta.inf.dir=${src.dir}/META-INF
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+annotation.processing.run.all.processors=true
+javac.modulepath=
 src.dir=src
-test.src.dir=test
+project.jolie=../../jolie
+debug.classpath=${run.classpath}
