--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,6 @@ build/
 /extensions/auto/nbproject/private/
 /libjolie/build
 /support/jolie-gwt/build
+/lib/jolie-xml/build
+/jolie/build
+/extensions/http/build
