--- a/lib/jolie-js/nbproject/private/private.properties
+++ b/lib/jolie-js/nbproject/private/private.properties
@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=C:\\Users\\maschio\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=/home/fmontesi/.netbeans/11.0/build.properties
