--- a/tools/jolie2java/pom.xml
+++ b/tools/jolie2java/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <artifactId>jolie2java</artifactId>
-    <groupId>jolie.org</groupId>
+    <groupId>jolie</groupId>
     <version>1.8.1</version>
 
     <properties>
