Auto supports JSON
Former-commit-id: 5bb6a51a1aae96fc10210c4266f0b7e167f7dc61

--- a/extensions/auto/nbproject/project.properties
+++ b/extensions/auto/nbproject/project.properties
@@ -41,7 +41,8 @@ jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.ini4j.jar}:\
     ${reference.jolie.jar}:\
-    ${reference.libjolie.jar}
+    ${reference.libjolie.jar}:\
+    ${reference.jolie-js.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -92,7 +93,9 @@ meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=true
 platform.active=default_platform
 project.jolie=../../jolie
+project.jolie-js=../../lib/jolie-js
 project.libjolie=../../libjolie
+reference.jolie-js.jar=${project.jolie-js}/dist/jolie-js.jar
 reference.jolie.jar=${project.jolie}/dist/jolie.jar
 reference.libjolie.jar=${project.libjolie}/dist/libjolie.jar
 run.classpath=\
