Mavenization of coreJavaServices
Former-commit-id: 9d0d73a6efbf7a940cc6ad9cc636e000b616b8d3

--- a/javaServices/coreJavaServices/pom.xml
+++ b/javaServices/coreJavaServices/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.jolie-lang</groupId>
-    <artifactId>libjolie</artifactId>
+    <artifactId>coreJavaServices</artifactId>
     <version>1.8.0</version>
     <packaging>jar</packaging>
     <properties>
@@ -10,6 +10,18 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <name>libjolie</name>
-    <description>The basic library used for Jolie code parsing and analysis.</description>
+    <name>coreJavaServices</name>
+    <description>Core Java services.</description>
+    <dependencies>
+        <dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>libjolie</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+		<dependency>
+            <groupId>${project.groupId}</groupId>
+            <artifactId>jolie</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
 </project>
