jolie-js  jolie-xml jolie-ssh
Former-commit-id: e18de583864ec6f3bbfa779becc78aa563cfd791

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,7 @@ build/
 /extensions/auto/nbproject/private/
 /libjolie/target/
 /jolie/target/
+/javaServices/coreJavaServices/target/
+/lib/jolie-js/target/
+/lib/jolie-ssl/target/
+/lib/jolie-xml/target/
