auto http btl2cap sodep jolie-gwt jolie-java
Former-commit-id: ac72fd9c853c28a1a5fcbb33814e12bef00b9760

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,9 @@ build/
 /lib/jolie-js/target/
 /lib/jolie-ssl/target/
 /lib/jolie-xml/target/
+/extensions/auto/target/
+/extensions/btl2cap/target/
+/extensions/http/target/
+/support/jolie-gwt/target/
+/extensions/sodep/target/
+/support/jolie-java/target/
