--- a/extensions/btl2cap/pom.xml
+++ b/extensions/btl2cap/pom.xml
@@ -1,15 +1,15 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-       xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-      <modelVersion>4.0.0</modelVersion>
-  <parent>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+	
+    <parent>
         <groupId>org.jolie-lang</groupId>
         <artifactId>distribution</artifactId>
         <relativePath>../../pom.xml</relativePath>
         <version>1.0.0</version>
     </parent>
     <groupId>org.jolie-lang</groupId>
-    <artifactId>http</artifactId>
+    <artifactId>btl2cap</artifactId>
     <version>${jolie.version}</version>
     <packaging>jar</packaging>
     <properties>
@@ -17,8 +17,7 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
     </properties>
-    <name>http
-    </name>
+    <name>btl2cap</name>
     <description>The basic library used for Jolie code parsing and analysis.</description>
     <build>
         <finalName>${project.artifactId}.jar</finalName>
@@ -58,22 +57,13 @@
             <artifactId>jolie</artifactId>
             <version>${jolie.version}</version>
         </dependency>
-         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>jolie-js</artifactId>
-            <version>${jolie.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>jolie-gwt</artifactId>
-            <version>${jolie.version}</version>
-        </dependency>
-                <dependency>
-            <groupId>com.google.gwt</groupId>
-            <artifactId>gwt-user</artifactId>
-            <version>2.8.2</version>
-            <scope>provided</scope>
-        </dependency>
+<dependency>
+    <groupId>net.sf.bluecove</groupId>
+    <artifactId>bluecove</artifactId>
+    <version>2.1.0</version>
+</dependency>
+
+
+
     </dependencies>
-  
 </project>
